--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <h3>First Order Ambisonics</h3>
         <button id="foa-play">Play</button>
         <button id="foa-pause">Pause</button>
-        <button id="foa-setCurrentPosition">Set current position [0:1]</button>
-        <input id="foa-position" size="8" type="text" value="0.4">
+        <input id="foa-position" size="4" type="text" value="0.4">
+        <button id="foa-setCurrentPosition">Position</button>
       </dt>
       <dd>
         <p>"César Franck" · Organ played by Daniela Niedhammer<br>
