Refactoring to ES6 modules (HOA still WIP)

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
   <meta charset="UTF-8">
   <title>Ambisonics Player</title>
-  <link href="main.css" rel="stylesheet" type="text/css">
+  <link href="mains.css" rel="stylesheet" type="text/css">
 
 </head>
 <body>
@@ -42,6 +42,8 @@
         <h3>Second Order Ambisonics</h3>
         <button id="soa-play">Play</button>
         <button id="soa-stop">Stop</button>
+        <input id="soa-position" size="4" type="text" value="0.4">
+        <button id="soa-setCurrentPosition">Position</button>
       </dt>
       <dd>
         <p>"Electro" · Synthetically generated Ambisonics<br>
@@ -87,24 +89,26 @@
   Made with 🎧 in Berlin
 </footer>
 
-<script src="https://www.gstatic.com/external_hosted/omnitone/build/omnitone.min.js"></script>
-<script src="players.js"></script>
+<script type="module">
+  import FOAPlayer from './modules/foaPlayer.esm.js'
+  import HOAPlayer from './modules/hoaPlayer.esm.js'
 
-<script>
   const foa = new FOAPlayer('sounds/foa.flac')
-  const soa = new HOAPlayer('sounds/soa.flac', 2)
-  const toa = new HOAPlayer('sounds/toa.flac', 3)
+  // const soa = new HOAPlayer('sounds/soa.flac', 2)
+  // const toa = new HOAPlayer('sounds/toa.flac', 3)
 
   document.getElementById('foa-play').addEventListener('click', foa.play)
   document.getElementById('foa-pause').addEventListener('click', foa.pause)
   document.getElementById('foa-setCurrentPosition').addEventListener('click',
     function () { foa.currentPosition = document.getElementById('foa-position').value })
 
-  document.getElementById('soa-play').addEventListener('click', soa.play)
-  document.getElementById('soa-stop').addEventListener('click', soa.stop)
-
-  document.getElementById('toa-play').addEventListener('click', toa.play)
-  document.getElementById('toa-stop').addEventListener('click', toa.stop)
+  // document.getElementById('soa-play').addEventListener('click', soa.play)
+  // document.getElementById('soa-stop').addEventListener('click', soa.stop)
+  // document.getElementById('soa-setCurrentPosition').addEventListener('click',
+  //   function () { soa.currentPosition = document.getElementById('soa-position').value })
+  //
+  // document.getElementById('toa-play').addEventListener('click', toa.play)
+  // document.getElementById('toa-stop').addEventListener('click', toa.stop)
 </script>
 
 </body>
