Create contentBuffer copy

--- a/index.html
+++ b/index.html
@@ -89,27 +89,7 @@
   Made with 🎧 in Berlin
 </footer>
 
-<script type="module">
-  import FOAPlayer from './modules/foaPlayer.esm.js'
-  import HOAPlayer from './modules/hoaPlayer.esm.js'
-
-  const foa = new FOAPlayer('sounds/foa.flac')
-  // const soa = new HOAPlayer('sounds/soa.flac', 2)
-  // const toa = new HOAPlayer('sounds/toa.flac', 3)
-
-  document.getElementById('foa-play').addEventListener('click', foa.play)
-  document.getElementById('foa-pause').addEventListener('click', foa.pause)
-  document.getElementById('foa-setCurrentPosition').addEventListener('click',
-    function () { foa.currentPosition = document.getElementById('foa-position').value })
-
-  // document.getElementById('soa-play').addEventListener('click', soa.play)
-  // document.getElementById('soa-stop').addEventListener('click', soa.stop)
-  // document.getElementById('soa-setCurrentPosition').addEventListener('click',
-  //   function () { soa.currentPosition = document.getElementById('soa-position').value })
-  //
-  // document.getElementById('toa-play').addEventListener('click', toa.play)
-  // document.getElementById('toa-stop').addEventListener('click', toa.stop)
-</script>
+<script src="main.js" type="module"></script>
 
 </body>
 </html>
