Extend Play button to Init button and Load button

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
     <dl>
       <dt>
         <h3>Second Order Ambisonics</h3>
+        <button id="soa-init">Init</button>
+        <button id="soa-load">Load</button>
         <button id="soa-play">Play</button>
         <button id="soa-stop">Stop</button>
         <input id="soa-position" size="4" type="text" value="0.4">
