--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
         <h3>Second Order Ambisonics</h3>
         <button id="soa-init">Init</button>
         <button id="soa-load">Load</button>
-        <button id="soa-play">Play</button>
+        <button id="soa-play">Play from</button>
         <input id="soa-position" size="4" type="text" value="0.4">
+        <button id="soa-pause">Pause</button>
         <button id="soa-stop">Stop</button>
       </dt>
       <dd>
@@ -60,8 +61,9 @@
         <h3>Third Order Ambisonics</h3>
         <button id="toa-init">Init</button>
         <button id="toa-load">Load</button>
-        <button id="toa-play">Play</button>
+        <button id="toa-play">Play from</button>
         <input id="toa-position" size="4" type="text" value="0.4">
+        <button id="toa-pause">Pause</button>
         <button id="toa-stop">Stop</button>
       </dt>
       <dd>
@@ -77,7 +79,6 @@
   <div>
     <h3>TODO</h3>
     <ol>
-      <li>Pausing in second and third order</li>
       <li>Rotation of the Soundfield</li>
       <li>JSAmbisonics implementation</li>
       <li>Listening tests</li>
