Refactor FOAPlayer and HOAPlayer to a single class OmnitonePlayer

--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
     <dl>
       <dt>
         <h3>First Order Ambisonics</h3>
-        <button id="foa-play">Play</button>
-        <button id="foa-pause">Pause</button>
+        <button id="foa-init">Init</button>
+        <button id="foa-load">Load</button>
+        <button id="foa-play">Play from</button>
         <input id="foa-position" size="4" type="text" value="0.4">
-        <button id="foa-setCurrentPosition">Position</button>
+        <button id="foa-pause">Pause</button>
+        <button id="foa-stop">Stop</button>
       </dt>
       <dd>
         <p>"César Franck" · Organ played by Daniela Niedhammer<br>
