--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
   <div>
     <h3>TODO</h3>
     <ol>
+      <li>Get playback position</li>
+      <li>Set gain</li>
       <li>Rotation of the Soundfield</li>
       <li>JSAmbisonics implementation</li>
       <li>Listening tests</li>
