Add getElapsedTimeInSeconds feature (at the expense of pause feature)

--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
         <button id="foa-init">Init</button>
         <button id="foa-load">Load</button>
         <button id="foa-play">Play from</button>
-        <input id="foa-position" size="4" type="text" value="0.4">
-        <button id="foa-pause">Pause</button>
+        <input id="foa-position" size="4" type="text" value="0">
         <button id="foa-stop">Stop</button>
+        <button id="foa-update">Update</button>
+        <progress id="foa-progress" value="0"></progress>
       </dt>
       <dd>
         <p>"César Franck" · Organ played by Daniela Niedhammer<br>
@@ -45,9 +46,10 @@
         <button id="soa-init">Init</button>
         <button id="soa-load">Load</button>
         <button id="soa-play">Play from</button>
-        <input id="soa-position" size="4" type="text" value="0.4">
-        <button id="soa-pause">Pause</button>
+        <input id="soa-position" size="4" type="text" value="0">
         <button id="soa-stop">Stop</button>
+        <button id="soa-update">Update</button>
+        <progress id="soa-progress" value="0"></progress>
       </dt>
       <dd>
         <p>"Electro" · Synthetically generated Ambisonics<br>
@@ -64,9 +66,10 @@
         <button id="toa-init">Init</button>
         <button id="toa-load">Load</button>
         <button id="toa-play">Play from</button>
-        <input id="toa-position" size="4" type="text" value="0.4">
-        <button id="toa-pause">Pause</button>
+        <input id="toa-position" size="4" type="text" value="0">
         <button id="toa-stop">Stop</button>
+        <button id="toa-update">Update</button>
+        <progress id="toa-progress" value="0"></progress>
       </dt>
       <dd>
         <p>"Dylanesque" · Acoustic guitar in a large open living room<br>
@@ -81,7 +84,6 @@
   <div>
     <h3>TODO</h3>
     <ol>
-      <li>Get playback position</li>
       <li>Set gain</li>
       <li>Rotation of the Soundfield</li>
       <li>JSAmbisonics implementation</li>
