Add resume functionality

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <button id="foa-play">Play from</button>
         <input id="foa-position" size="4" type="text" value="0">
         <button id="foa-stop">Stop</button>
+        <button id="foa-resume">Resume</button>
         <button id="foa-update">Update</button>
         <progress id="foa-progress" value="0"></progress>
       </dt>
@@ -48,6 +49,7 @@
         <button id="soa-play">Play from</button>
         <input id="soa-position" size="4" type="text" value="0">
         <button id="soa-stop">Stop</button>
+        <button id="soa-resume">Resume</button>
         <button id="soa-update">Update</button>
         <progress id="soa-progress" value="0"></progress>
       </dt>
@@ -68,6 +70,7 @@
         <button id="toa-play">Play from</button>
         <input id="toa-position" size="4" type="text" value="0">
         <button id="toa-stop">Stop</button>
+        <button id="toa-resume">Resume</button>
         <button id="toa-update">Update</button>
         <progress id="toa-progress" value="0"></progress>
       </dt>
