--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
         <button id="foa-resume">Resume</button>
         <button id="foa-update">Update</button>
         <progress id="foa-progress" value="0"></progress>
+        <input id="foa-gain" max="24" min="-60" step="1" type="range" value="0">
+        <span id="foa-gain-label">0</span> dB
       </dt>
       <dd>
         <p>"César Franck" · Organ played by Daniela Niedhammer<br>
@@ -52,6 +54,8 @@
         <button id="soa-resume">Resume</button>
         <button id="soa-update">Update</button>
         <progress id="soa-progress" value="0"></progress>
+        <input id="soa-gain" max="24" min="-60" step="1" type="range" value="0">
+        <span id="soa-gain-label">0</span> dB
       </dt>
       <dd>
         <p>"Electro" · Synthetically generated Ambisonics<br>
@@ -73,6 +77,8 @@
         <button id="toa-resume">Resume</button>
         <button id="toa-update">Update</button>
         <progress id="toa-progress" value="0"></progress>
+        <input id="toa-gain" max="24" min="-60" step="1" type="range" value="0">
+        <span id="toa-gain-label">0</span> dB
       </dt>
       <dd>
         <p>"Dylanesque" · Acoustic guitar in a large open living room<br>
@@ -87,7 +93,6 @@
   <div>
     <h3>TODO</h3>
     <ol>
-      <li>Set gain</li>
       <li>Rotation of the Soundfield</li>
       <li>JSAmbisonics implementation</li>
       <li>Listening tests</li>
