WIP add rotation functionality

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
         <progress id="foa-progress" value="0"></progress>
         <input id="foa-gain" max="0" min="-80" step="1" type="range" value="0">
         <span id="foa-gain-label">0</span> dB
+        <input id="foa-azimuth" max="180" min="-180" step="0.01" type="range" value="0">
+        <span id="foa-azimuth-label">0</span>° Azimuth
+        <input id="foa-elevation" max="90" min="-90" step="0.01" type="range" value="0">
+        <span id="foa-elevation-label">0</span>° Elevation
       </dt>
       <dd>
         <p>"César Franck" · Organ played by Daniela Niedhammer<br>
@@ -56,6 +60,10 @@
         <progress id="soa-progress" value="0"></progress>
         <input id="soa-gain" max="0" min="-80" step="1" type="range" value="0">
         <span id="soa-gain-label">0</span> dB
+        <input id="soa-azimuth" max="180" min="-180" step="0.01" type="range" value="0">
+        <span id="soa-azimuth-label">0</span>° Azimuth
+        <input id="soa-elevation" max="90" min="-90" step="0.01" type="range" value="0">
+        <span id="soa-elevation-label">0</span>° Elevation
       </dt>
       <dd>
         <p>"Electro" · Synthetically generated Ambisonics<br>
@@ -79,6 +87,10 @@
         <progress id="toa-progress" value="0"></progress>
         <input id="toa-gain" max="0" min="-80" step="1" type="range" value="0">
         <span id="toa-gain-label">0</span> dB
+        <input id="toa-azimuth" max="180" min="-180" step="0.01" type="range" value="0">
+        <span id="toa-azimuth-label">0</span>° Azimuth
+        <input id="toa-elevation" max="90" min="-90" step="0.01" type="range" value="0">
+        <span id="toa-elevation-label">0</span>° Elevation
       </dt>
       <dd>
         <p>"Dylanesque" · Acoustic guitar in a large open living room<br>
