Error handling via async functions

--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
       <dt>
         <h3>First Order Ambisonics</h3>
         <button id="foa-init">Init</button>
-        <button id="foa-load">Load</button>
-        <button id="foa-play">Play from</button>
-        <input id="foa-position" size="4" type="text" value="0">
-        <button id="foa-stop">Stop</button>
-        <button id="foa-resume">Resume</button>
-        <button id="foa-update">Update</button>
-        <progress id="foa-progress" value="0"></progress>
-        <input id="foa-gain" max="0" min="-60" step="1" type="range" value="0">
-        <span id="foa-gain-label">0</span> dB
-        <input id="foa-azimuth" max="180" min="-180" step="0.01" type="range" value="0">
+        <button disabled id="foa-load">Load</button>
+        <button disabled id="foa-play">Play from</button>
+        <input disabled id="foa-position" size="4" type="text" value="0">
+        <button disabled id="foa-stop">Stop</button>
+        <button disabled id="foa-resume">Resume</button>
+        <button disabled id="foa-update">Update Progress</button>
+        <progress disabled id="foa-progress" value="0"></progress>
+        <input disabled id="foa-gain" max="0" min="-60" step="1" type="range" value="0">
+        <span disabled id="foa-gain-label">0</span> dB
+        <input disabled id="foa-azimuth" max="180" min="-180" step="0.01" type="range" value="0">
         <span id="foa-azimuth-label">0</span>° Azimuth
-        <input id="foa-elevation" max="90" min="-90" step="0.01" type="range" value="0">
+        <input disabled id="foa-elevation" max="90" min="-90" step="0.01" type="range" value="0">
         <span id="foa-elevation-label">0</span>° Elevation
       </dt>
       <dd>
@@ -51,18 +51,18 @@
       <dt>
         <h3>Second Order Ambisonics</h3>
         <button id="soa-init">Init</button>
-        <button id="soa-load">Load</button>
-        <button id="soa-play">Play from</button>
-        <input id="soa-position" size="4" type="text" value="0">
-        <button id="soa-stop">Stop</button>
-        <button id="soa-resume">Resume</button>
-        <button id="soa-update">Update</button>
-        <progress id="soa-progress" value="0"></progress>
-        <input id="soa-gain" max="0" min="-60" step="1" type="range" value="0">
-        <span id="soa-gain-label">0</span> dB
-        <input id="soa-azimuth" max="180" min="-180" step="0.01" type="range" value="0">
+        <button disabled id="soa-load">Load</button>
+        <button disabled id="soa-play">Play from</button>
+        <input disabled id="soa-position" size="4" type="text" value="0">
+        <button disabled id="soa-stop">Stop</button>
+        <button disabled id="soa-resume">Resume</button>
+        <button disabled id="soa-update">Update Progress</button>
+        <progress disabled id="soa-progress" value="0"></progress>
+        <input disabled id="soa-gain" max="0" min="-60" step="1" type="range" value="0">
+        <span disabled id="soa-gain-label">0</span> dB
+        <input disabled id="soa-azimuth" max="180" min="-180" step="0.01" type="range" value="0">
         <span id="soa-azimuth-label">0</span>° Azimuth
-        <input id="soa-elevation" max="90" min="-90" step="0.01" type="range" value="0">
+        <input disabled id="soa-elevation" max="90" min="-90" step="0.01" type="range" value="0">
         <span id="soa-elevation-label">0</span>° Elevation
       </dt>
       <dd>
@@ -78,18 +78,18 @@
       <dt>
         <h3>Third Order Ambisonics</h3>
         <button id="toa-init">Init</button>
-        <button id="toa-load">Load</button>
-        <button id="toa-play">Play from</button>
-        <input id="toa-position" size="4" type="text" value="0">
-        <button id="toa-stop">Stop</button>
-        <button id="toa-resume">Resume</button>
-        <button id="toa-update">Update</button>
-        <progress id="toa-progress" value="0"></progress>
-        <input id="toa-gain" max="0" min="-60" step="1" type="range" value="0">
-        <span id="toa-gain-label">0</span> dB
-        <input id="toa-azimuth" max="180" min="-180" step="0.01" type="range" value="0">
+        <button disabled id="toa-load">Load</button>
+        <button disabled id="toa-play">Play from</button>
+        <input disabled id="toa-position" size="4" type="text" value="0">
+        <button disabled id="toa-stop">Stop</button>
+        <button disabled id="toa-resume">Resume</button>
+        <button disabled id="toa-update">Update Progress</button>
+        <progress disabled id="toa-progress" value="0"></progress>
+        <input disabled id="toa-gain" max="0" min="-60" step="1" type="range" value="0">
+        <span disabled id="toa-gain-label">0</span> dB
+        <input disabled id="toa-azimuth" max="180" min="-180" step="0.01" type="range" value="0">
         <span id="toa-azimuth-label">0</span>° Azimuth
-        <input id="toa-elevation" max="90" min="-90" step="0.01" type="range" value="0">
+        <input disabled id="toa-elevation" max="90" min="-90" step="0.01" type="range" value="0">
         <span id="toa-elevation-label">0</span>° Elevation
       </dt>
       <dd>
