--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
   <meta charset="UTF-8">
   <title>Ambisonics Player</title>
-  <link href="main.css" rel="stylesheet" type="text/css">
+  <link href="maisn.css" rel="stylesheet" type="text/css">
 
 </head>
 <body>
