--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <input disabled id="foa-position" size="4" type="text" value="0">
         <button disabled id="foa-stop">Stop</button>
         <button disabled id="foa-resume">Resume</button>
-        <button disabled id="foa-update">Update Progress</button>
+        <button disabled id="foa-update-progress">Progress</button>
         <progress disabled id="foa-progress" value="0"></progress>
         <input disabled id="foa-gain" max="0" min="-60" step="1" type="range" value="0">
         <span disabled id="foa-gain-label">0</span> dB
@@ -56,7 +56,7 @@
         <input disabled id="soa-position" size="4" type="text" value="0">
         <button disabled id="soa-stop">Stop</button>
         <button disabled id="soa-resume">Resume</button>
-        <button disabled id="soa-update">Update Progress</button>
+        <button disabled id="soa-update-progress">Progress</button>
         <progress disabled id="soa-progress" value="0"></progress>
         <input disabled id="soa-gain" max="0" min="-60" step="1" type="range" value="0">
         <span disabled id="soa-gain-label">0</span> dB
@@ -83,7 +83,7 @@
         <input disabled id="toa-position" size="4" type="text" value="0">
         <button disabled id="toa-stop">Stop</button>
         <button disabled id="toa-resume">Resume</button>
-        <button disabled id="toa-update">Update Progress</button>
+        <button disabled id="toa-update-progress">Progress</button>
         <progress disabled id="toa-progress" value="0"></progress>
         <input disabled id="toa-gain" max="0" min="-60" step="1" type="range" value="0">
         <span disabled id="toa-gain-label">0</span> dB
