Add display current time feature

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         <h3>First Order Ambisonics</h3>
         <button id="foa-init">Init</button>
         <button disabled id="foa-load">Load</button>
-        <span id="foa-time"></span>
+        <span id="foa-current-time"></span>
+        <span id="foa-duration"></span>
         <button disabled id="foa-play">Play from %</button>
         <input disabled id="foa-position" size="4" type="text" value="0">
         <button disabled id="foa-stop">Stop</button>
@@ -53,7 +54,8 @@
         <h3>Second Order Ambisonics</h3>
         <button id="soa-init">Init</button>
         <button disabled id="soa-load">Load</button>
-        <span id="soa-time"></span>
+        <span id="soa-current-time"></span>
+        <span id="soa-duration"></span>
         <button disabled id="soa-play">Play from %</button>
         <input disabled id="soa-position" size="4" type="text" value="0">
         <button disabled id="soa-stop">Stop</button>
@@ -81,7 +83,8 @@
         <h3>Third Order Ambisonics</h3>
         <button id="toa-init">Init</button>
         <button disabled id="toa-load">Load</button>
-        <span id="toa-time"></span>
+        <span id="toa-current-time"></span>
+        <span id="toa-duration"></span>
         <button disabled id="toa-play">Play from %</button>
         <input disabled id="toa-position" size="4" type="text" value="0">
         <button disabled id="toa-stop">Stop</button>
