--- a/index.html
+++ b/index.html
@@ -33,18 +33,25 @@
         <button disabled id="foa-stop">Stop</button>
         <button disabled id="foa-resume">Resume</button>
 
-        <button disabled id="foa-update-progress">Progress</button>
+        <button disabled id="foa-update-progress">Display progress</button>
+        <br>
         <span id="foa-current-time">0:00</span> /
         <span id="foa-duration">0:00</span>
         <progress id="foa-progress" value="0"></progress>
+
+        <br>
 
         <label for="foa-gain">Gain</label>
         <input disabled id="foa-gain" max="0" min="-60" step="1" type="range" value="0">
         <span id="foa-gain-label">0</span> dB
 
+        <br>
+
         <label for="foa-azimuth">Azimuth</label>
         <input disabled id="foa-azimuth" max="180" min="-180" step="0.01" type="range" value="0">
         <span id="foa-azimuth-label">0</span>°
+
+        <br>
 
         <label for="foa-elevation">Elevation</label>
         <input disabled id="foa-elevation" max="90" min="-90" step="0.01" type="range" value="0">
@@ -72,18 +79,25 @@
         <button disabled id="soa-stop">Stop</button>
         <button disabled id="soa-resume">Resume</button>
 
-        <button disabled id="soa-update-progress">Progress</button>
+        <button disabled id="soa-update-progress">Display progress</button>
+        <br>
         <span id="soa-current-time">0:00</span> /
         <span id="soa-duration">0:00</span>
         <progress id="soa-progress" value="0"></progress>
+
+        <br>
 
         <label for="soa-gain">Gain</label>
         <input disabled id="soa-gain" max="0" min="-60" step="1" type="range" value="0">
         <span id="soa-gain-label">0</span> dB
 
+        <br>
+
         <label for="soa-azimuth">Azimuth</label>
         <input disabled id="soa-azimuth" max="180" min="-180" step="0.01" type="range" value="0">
         <span id="soa-azimuth-label">0</span>°
+
+        <br>
 
         <label for="soa-elevation">Elevation</label>
         <input disabled id="soa-elevation" max="90" min="-90" step="0.01" type="range" value="0">
@@ -111,18 +125,24 @@
         <button disabled id="toa-stop">Stop</button>
         <button disabled id="toa-resume">Resume</button>
 
-        <button disabled id="toa-update-progress">Progress</button>
+        <button disabled id="toa-update-progress">Display progress</button>
+        <br>
         <span id="toa-current-time">0:00</span> /
         <span id="toa-duration">0:00</span>
         <progress id="toa-progress" value="0"></progress>
 
+        <br>
+
         <label for="toa-gain">Gain</label>
         <input disabled id="toa-gain" max="0" min="-60" step="1" type="range" value="0">
         <span id="toa-gain-label">0</span> dB
+        <br>
 
         <label for="toa-azimuth">Azimuth</label>
         <input disabled id="toa-azimuth" max="180" min="-180" step="0.01" type="range" value="0">
         <span id="toa-azimuth-label">0</span>°
+
+        <br>
 
         <label for="toa-elevation">Elevation</label>
         <input disabled id="toa-elevation" max="90" min="-90" step="0.01" type="range" value="0">
