Add loop functionality

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 
         <button disabled id="foa-stop">Stop</button>
         <button disabled id="foa-resume">Resume</button>
+        <label for="foa-loop">Loop</label>
+        <input disabled id="foa-loop" type="checkbox">
 
         <br>
 
@@ -78,6 +80,8 @@
 
         <button disabled id="soa-stop">Stop</button>
         <button disabled id="soa-resume">Resume</button>
+        <label for="soa-loop">Loop</label>
+        <input disabled id="soa-loop" type="checkbox">
 
         <br>
 
@@ -124,7 +128,9 @@
 
         <button disabled id="toa-stop">Stop</button>
         <button disabled id="toa-resume">Resume</button>
-
+        <label for="toa-loop">Loop</label>
+        <input disabled id="toa-loop" type="checkbox">
+        
         <br>
 
         <span id="toa-current-time">0:00</span> /
