--- a/fsm.html
+++ b/fsm.html
@@ -25,7 +25,7 @@
 </div>
 
 <script src="modules/fetchMachine.js" type="module"></script>
-<script src="modules/fsm.js" type="module"></script>
+<script defer src="modules/fsm.js" type="module"></script>
 
 </body>
 </html>
