--- a/fsm.html
+++ b/fsm.html
@@ -3,9 +3,6 @@
 <head>
   <meta charset="UTF-8"/>
   <title>Ambisonics Player</title>
-  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-        rel="stylesheet"
-        type="text/css"/>
 </head>
 <body>
 
@@ -19,7 +16,7 @@
     Upload Time
   </time>
   <div class="track__venue">
-    <a href="#" target="_blank"><i class="fa fa-2x fa-map-marker"></i></a>
+    <a href="#" target="_blank">Venue</a>
   </div>
   <div class="track__license">License</a></div>
 </div>
