--- a/fsm.html
+++ b/fsm.html
@@ -21,7 +21,7 @@
   <div class="track__license">License</a></div>
 </div>
 
-<script src="modules/fetchMachine.js" type="module"></script>
+<script src="modules/ambisonicsMachine.js" type="module"></script>
 <script defer src="modules/fsm.js" type="module"></script>
 
 </body>
