Refactoring with consistent naming

--- a/fsm.html
+++ b/fsm.html
@@ -6,7 +6,10 @@
 </head>
 <body>
 
-<div class="track__meta">
+<div class="controls">
+  <button class="controls__play" disabled>Play</button>
+</div>
+<div class="track">
   <div class="track__time">00:00:00</div>
   <div class="track__artist">Artist</div>
   <div class="track__title">Title</div>
