Add PLAY_PAUSE button stub

--- a/fsm.html
+++ b/fsm.html
@@ -7,7 +7,7 @@
 <body>
 
 <div class="controls">
-  <button class="controls__play" disabled>Play</button>
+  <button class="controls__play-pause" disabled>Play</button>
 </div>
 <div class="track">
   <div class="track__time">00:00:00</div>
