Add display of track duration

--- a/fsm.html
+++ b/fsm.html
@@ -10,7 +10,8 @@
   <button class="controls__play-pause" disabled>Play</button>
 </div>
 <div class="track">
-  <div class="track__time">00:00:00</div>
+  <div class="track__elapsed-time">00:00:00</div>
+  <div class="track__duration">00:00:00</div>
   <div class="track__artist">Artist</div>
   <div class="track__title">Title</div>
   <div class="track__composer">Composer</div>
