--- a/fsm.html
+++ b/fsm.html
@@ -26,7 +26,7 @@
   <div class="track__license">License</a></div>
 </div>
 
-<script defer src="fsm.js" type="module"></script>
+<script src="src/fsm.js" type="module"></script>
 
 </body>
 </html>
