--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
   <meta charset="UTF-8">
   <title>Ambisonics Player</title>
-  <link href="main.css" rel="stylesheet" type="text/css">
+  <link href="styles/main.css" rel="stylesheet" type="text/css">
 
 </head>
 <body>
@@ -179,7 +179,7 @@
   Made with 🎧 in Berlin
 </footer>
 
-<script src="main.js" type="module"></script>
+<script src="src/main.js" type="module"></script>
 
 </body>
 </html>
